src/modules/85-cv/pages/health-source/common/MetricThresholds/Components/MetricThreshold.module.scss
.metricThresholdContent {
  &Card {
    width: 100%;
  }

  &Tabs {
    color: var(--black);
  }

  &IgnoreTableHeader,
  &IgnoreTableRow {
    display: grid;
    grid-gap: 4px;
    align-items: center;

    :global(.FormError--error) {
      font-size: var(--font-size-small);
    }
  }

  &FailFastTableHeader {
    grid-template-columns: 13% 13% 13% 15% 5% 1fr !important;

    &OnlyCustomMetric {
      grid-template-columns: 13% 13% 15% 5% 1fr !important;
    }
  }

  &IgnoreTableHeader {
    grid-template-columns: 20% 20% 20% 1fr;
    margin: var(--spacing-5) 0 !important;
    > p,
    .criteriaHeader {
      color: var(--black) !important;
      text-transform: uppercase;
      font-size: var(--font-size-small) !important;
      font-weight: bold !important;
    }

    &OnlyCustomMetric {
      grid-template-columns: 20% 20% 1fr !important;
    }
  }

  &FailFastTableRow {
    grid-template-columns: 13% 13% 13% 15% 5% 1fr 50px !important;

    &OnlyCustomMetric {
      grid-template-columns: 13% 13% 15% 5% 1fr 50px !important;
    }
  }

  &IgnoreTableRow {
    grid-template-columns: 20% 20% 20% 1fr 50px;
    padding: var(--spacing-3) 0 !important;
    border-bottom: 1px solid var(--grey-200) !important;

    :global(.bp3-form-group) {
      margin-bottom: var(--spacing-0) !important;
    }

    :global(input) {
      border: 1px solid var(--grey-100);
    }

    &:hover {
      background-color: var(--grey-50);
      :global(input) {
        border: 1px solid var(--grey-300) !important;
      }
    }

    &OnlyCustomMetric {
      grid-template-columns: 20% 20% 1fr 50px !important;
    }
  }

  &Select {
    margin-bottom: var(--spacing-0) !important;

    input {
      width: 150px !important;
      border-color: transparent;
    }
  }

  &Input {
    margin-bottom: var(--spacing-0) !important;
    input {
      width: 70px !important;
    }

    label span {
      white-space: nowrap;
    }

    &:not(:last-child) {
      margin-right: var(--spacing-3);
    }

    &Wrapper {
      margin-bottom: 0 !important;
    }
  }

  &Criteria {
    margin-right: var(--spacing-3);
  }
}

.emptyThresholdsContainer {
  text-align: center;
  margin-top: var(--spacing-huge);
}

.noThresholdsMessageCard {
  height: initial !important;
  margin-top: 100px !important;
}

